tests/spec/pass/generic_map_param.aja
fuc sum_values(m: map[str, int]) -> int:
    sum = 0
    for k, v in m:
        sum = sum + v
    return sum

scores = {"a": 2, "b": 3}
print(sum_values(scores))

empty = {}
print(sum_values(empty))
empty["x"] = 9
print(sum_values(empty))
